--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://forms.gle/SzRz8JLwPBiQSKg99" />
+    <meta http-equiv="refresh" content="100; url=https://forms.gle/SzRz8JLwPBiQSKg99" />
   </head>
   <body>
-    <p><a href="https://forms.gle/SzRz8JLwPBiQSKg99">Kysely</a>.</p>
+    <p><a href="https://forms.gle/SzRz8JLwPBiQSKg99">Kysely</a></p>
+    <p><a href="info-opelle.pdf">Info opelle</a></p>
   </body>
 </html>
