--- a/info-opelle.html
+++ b/info-opelle.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
   <body>
-    <embed src="info_opelle.pdf" type="application/pdf"/>
+    <embed src="info-opelle.pdf" type="application/pdf" width="100%" height="100%"/>
   </body>
 </html>
