--- a/ylpparivinkit.html
+++ b/ylpparivinkit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://forms.gle/SzRz8JLwPBiQSKg99" />
+    <meta http-equiv="refresh" content="0; url=https://forms.gle/bf91SKGUtyLMRXmu7" />
   </head>
   <body>
     <p><a href="https://forms.gle/bf91SKGUtyLMRXmu7">Anna vinkki</a></p>
