--- a/kerro_kurssista.html
+++ b/kerro_kurssista.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://forms.gle/1UchgXPWxHHTqvtp8" />
+    <meta http-equiv="refresh" content="0; url=https://forms.gle/1n4zJWTxoDi1wJ1T7" />
   </head>
   <body>
-    <p><a href="hhttps://forms.gle/1UchgXPWxHHTqvtp8">Kerro kurssista</a></p>
+    <p><a href="https://forms.gle/1n4zJWTxoDi1wJ1T7">Kerro kurssista</a></p>
   </body>
 </html>
